--- a/src/sections/khaled/components/card-content/lottery-card/lottery-card-outside/lottery-card-inside/lottery-card-content/lottery-card-content.styles.scss
+++ b/src/sections/khaled/components/card-content/lottery-card/lottery-card-outside/lottery-card-inside/lottery-card-content/lottery-card-content.styles.scss
@@ -29,7 +29,6 @@
       .lottery-btn-right-arrow {
         align-self: center;
         flex-shrink: 0;
-        stroke: white;
         stroke-width: 35px;
       }
     }
