--- a/src/sections/khaled/components/card-content/prediction-card/prediction-card-outside/prediction-card-inside/prediction-card-content/prediction-card-content.styles.scss
+++ b/src/sections/khaled/components/card-content/prediction-card/prediction-card-outside/prediction-card-inside/prediction-card-content/prediction-card-content.styles.scss
@@ -33,7 +33,6 @@
       .prediction-btn-right-arrow {
         align-self: center;
         flex-shrink: 0;
-        stroke: white;
         stroke-width: 35px;
       }
     }
