--- a/src/sections/khaled/components/card-content/prediction-card/prediction-card-outside/prediction-card-inside/prediction-card-content/prediction-text/prediction-text.styles.scss
+++ b/src/sections/khaled/components/card-content/prediction-card/prediction-card-outside/prediction-card-inside/prediction-card-content/prediction-text/prediction-text.styles.scss
@@ -4,9 +4,9 @@
   display: flex;
   flex-direction: column;
   margin-top: 48px;
+  color: rgb(40, 13, 95);
 
   .prediction-text-div {
-    color: var(--color-dark-purple);
     font-weight: 600;
     line-height: 1.5;
     font-size: 16px;
@@ -25,7 +25,6 @@
   }
 
   .prediction-cake-div {
-    color: car(--color-dark-purple);
     font-weight: 600;
     line-height: 1.5;
     margin-bottom: 24px;
@@ -33,7 +32,6 @@
   }
 
   .prediction-price-div {
-    color: var(--color-dark-purple);
     font-weight: 400;
     line-height: 1.5;
     margin-bottom: 40px;
